<resources>
    <string name="app_name">Wine Me App</string>
    <string name="welcome_msg">Welcome to Wine Me Up!</string>
    <string name="search_msg">Wine Search</string>
    <string name="title_activity_side_menu">SideMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="barcode_scanner_coming_soon">"Barcode Scanner coming soon"</string>
    <string name="wine_catalogue">Wine Catalogue</string>
    <string name="wine_ratings">Wine Ratings</string>
    <string name="wine_types">Wine Type</string>
    <string name="get_wine_recommendations">Get Wine Recommendations</string>
    <string name="scan_wine_barcode">Scan a Wine Bottle\'s Barcode</string>
    <string name="refresh_wine_list">Refresh Wine List</string>
    <string name="refresh_wine_msg">Refreshing List of Wines</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="score">Score</string>
    <string name="confidence">Confidence</string>
    <string name="number_of_reviewers">Number of Reviewers</string>
    <string name="wine_primeurs">Primeurs</string>
    <string name="order_ratings_message">Select one of the following to order ratings:</string>
    <string name="remove_all">Remove All</string>
    <string name="next_btn_text">Next</string>
    <string name="wine_recommendations">Wines Worth Trying</string>
    <string name="change_selection">Change Selection</string>
    <string name="back_button">Back</string>
    <string name="not_available">Not Available</string>

    <string name="appellation_label">Appellation: %s</string>
    <string name="color_label">Colour: %s</string>
    <string name="country_label">Country: %s</string>
    <string name="region_label">Region: %s</string>
    <string name="type_label">Type: %s</string>
    <string name="classification_label">Classification: %s</string>
    <string name="vintage_label">Vintage: %s</string>
    <string name="date_label">Date: %s</string>
    <string name="primeurs_label">Is Primeurs: %s</string>
    <string name="score_label">Score: %s</string>
    <string name="confidence_label">Confidence: %s</string>
    <string name="reviewer_count_label">Number of Reviews: %s</string>
    <string name="global_scores">Global Scores</string>
    <string name="twitter_reviewers">Twitter Reviewers</string>

    <string name="points">Points: %s</string>
    <string name="description">Description: %s</string>
    <string name="taster_name">Taster Name: %s</string>
    <string name="taster_twitter_handle">Twitter Handle: %s</string>
    <string name="designation">Designation: %s</string>
    <string name="variety">Variety: %s</string>
    <string name="region_1">Region 1: %s</string>
    <string name="region_2">Region 2: %s</string>
    <string name="province">Province: %s</string>
    <string name="country">Country: %s</string>
    <string name="winery">Winery: %s</string>
    <string name="price">Price(ZAR): %s</string>

</resources>
