<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clWineRating"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <TextView
        android:id="@+id/ratingMessageHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/wine_ratings"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ratingMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/order_ratings_message"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/ratingMessageHeader" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:padding="10dp"
        app:chipSpacing="10dp"
        app:layout_constraintTop_toBottomOf="@id/ratingMessage"
        app:singleLine="false"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/score_chip"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            app:chipIcon="@drawable/ic_score" />

        <com.google.android.material.chip.Chip
            android:id="@+id/confidence_chip"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confidence"
            app:chipIcon="@drawable/ic_trophy" />

        <com.google.android.material.chip.Chip
            android:id="@+id/reviewers_chip"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_reviewers"
            app:chipIcon="@drawable/ic_number_of_reviewers" />

    </com.google.android.material.chip.ChipGroup>

    <ListView
        android:id="@+id/lvSortedWineList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/chip_group"
        app:layout_constraintBottom_toTopOf="@id/backButton"/>

    <Button
        android:id="@+id/backButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lvSortedWineList" />
</androidx.constraintlayout.widget.ConstraintLayout>